apimanagement-istio-poc-master/apimanagement-istio-poc-master/samples/istio-gateway.yaml
# Criação de gateway para acesso externo. Os virtual services que forem utilizar o gateway, devem ter a propriedade gateways setada com o nome deste gateway:
# gateways:
# - app-gateway

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: randomapi
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
