apimanagement-istio-poc-master/apimanagement-istio-poc-master/samples/virtualservice-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: randomapi
  namespace: randomapi
spec:
  hosts:
  - randomapi
  http:
  - route:
    - destination:
        host: randomapi
        port:
          number: 80
